# gnome-keyring-cli

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gnome-keyring-cli.c
